SFDC Automation/src/objects/MARCOM_Contacts__c.object
<CustomObject>
    <description>Used to Link Contacts to PR Manager Campaigns.  This also allows roles to be assigned to the contacts as well.</description>
    <fields>
        <fullName>Arrival_Date_Time__c</fullName>
        <label>Arrival Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendance_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <label>Attendee Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PR_Manager_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Time__c</fullName>
        <label>Depart Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PR_Manager__c</fullName>
        <label>PR Manager</label>
        <referenceTo>Marketing_Deliverable__c</referenceTo>
        <relationshipName>PR_Manager_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth Space Reservations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target/Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MARCOM Contact</label>
    <nameField>
        <displayFormat>PRMC-{000000000}</displayFormat>
        <label>MARCOM Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MARCOM Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>